--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="page__offers-block page__offers-block-color--ecedff">
                     <img src="images/1x/Group10.svg" alt="Reatime Monitoring" class="page__offers-block-img">
-                    <h2>Reatime Monitoring</h2>
+                    <h2>Realtime Monitoring</h2>
                     <p>Delivery is process of transporting from source point to predefined destination</p>
                 </div>
             </section>
@@ -111,7 +111,10 @@
                 </picture>
                 <div class="page__apply-aside">
                     <h2 class="page__title">Apply for Ambassador</h2>
-                    <div class="page__apply-aside-lines">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
+                    <div class="page__apply-aside-lines">
+                        <p>Need to send something on time? Delivery is process of transporting goods from<br>
+                            a source location to predefined destination</p>
+                    </div>
                     <button type="button" class="page__apply-aside-button">Apply Now</button>
                 </div>
             </section>
