fixed all bags by comments

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/6-adaptive/index.html
@@ -17,7 +17,7 @@
             <div class="header__info">
                 <div class="header__info-number-phone">
                     <a class="header__info-number-phone_input" href="tel:+08801877576457">
-                        <svg class="phone">
+                        <svg class="header__phone-icon">
                             <use xlink:href="#phone"></use>
                         </svg>
                         +08801877576457
@@ -25,10 +25,12 @@
                 </div>
                 <button type="button" class="header__info_btn">Sign In</button>
                 <div class="header__info-language">
-                    <svg class="globus">
-                        <use xlink:href="#globus"></use>
-                    </svg>
-                    <p class="header__info-language-change">EN</p>
+                    <a class="header__info-link" href="#languege">
+                        <svg class="header__globus-icon">
+                            <use xlink:href="#globus"></use>
+                        </svg>
+                        <p class="header__info-language-change">EN</p>
+                    </a>
                 </div>
             </div>
         </header>
@@ -64,47 +66,47 @@
                     <div class="choose-us__list">
                         <div class="choose-us__list-card choose-us__list-card--card-pink">
                             <img src="images/Indastry.svg" alt="Industry-leading tech">
-                            <h4 class="card__head">Industry-leading tech</h4>
+                            <h4 class="card__list-head">Industry-leading tech</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-blue-dark">
                             <img src="images/Coverage.svg" alt="Nationwide coverage">
-                            <h4 class="card__head">Nationwide coverage</h4>
+                            <h4 class="card__list-head">Nationwide coverage</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-pink-dark">
                             <img src="images/Delivery.svg" alt="Fastest Delivery">
-                            <h4 class="card__head">Fastest Delivery</h4>
+                            <h4 class="card__list-head">Fastest Delivery</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-blue-light">
                             <img src="images/Payment.svg" alt="Next day payment">
-                            <h4 class="card__head">Next day payment</h4>
+                            <h4 class="card__list-head">Next day payment</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-pink-light">
                             <img src="images/Rates.svg" alt="Best COD rates">
-                            <h4 class="card__head">Best COD rates</h4>
+                            <h4 class="card__list-head">Best COD rates</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-pink">
                             <img src="images/Secure.svg" alt="Secure handling">
-                            <h4 class="card__head">Secure handling</h4>
+                            <h4 class="card__list-head">Secure handling</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-blue">
                             <img src="images/19-insurance.svg" alt="Product insurance">
-                            <h4 class="card__head">Product insurance</h4>
+                            <h4 class="card__list-head">Product insurance</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-pink-dark">
                             <img src="images/Verified.svg" alt="Verified Products">
-                            <h4 class="card__head">Verified Products</h4>
+                            <h4 class="card__list-head">Verified Products</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                         <div class="choose-us__list-card choose-us__list-card--card-blue-dark">
                             <img src="images/Realtime.svg" alt="Realtime Monitoring">
-                            <h4 class="card__head">Realtime Monitoring</h4>
+                            <h4 class="card__list-head">Realtime Monitoring</h4>
                             <p class="card__text">Delivery is process of transporting from source point to predefined destination.</p>
                         </div>
                     </div>
@@ -151,7 +153,7 @@
                         <div class="card__learn-more">
                             <a class="card__learn-more_link" href="#Learn">
                                 Learn More
-                                <svg class="arrow">
+                                <svg class="card__arrow">
                                     <use xlink:href="#arrow"></use>
                                 </svg>
                             </a>
@@ -180,7 +182,7 @@
                         <div class="card__learn-more">
                             <a class="card__learn-more_link" href="#Learn">
                                 Learn More
-                                <svg class="arrow">
+                                <svg class="card__arrow">
                                     <use xlink:href="#arrow"></use>
                                 </svg>
                             </a>
@@ -209,7 +211,7 @@
                         <div class="card__learn-more">
                             <a class="card__learn-more_link" href="#Learn">
                                 Learn More
-                                <svg class="arrow">
+                                <svg class="card__arrow">
                                     <use xlink:href="#arrow"></use>
                                 </svg>
                             </a>
