--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -6,102 +6,132 @@
         <title>Adaptive</title>
         <link rel="stylesheet" href="style_adaptive.css">
     </head>
-    <header class="header">
-        <div class="header__logo">
-            <img src="images/1x/logo.png" alt="logo">
-        </div>
-        <div class ="header__items">
-            <div class = "header__items-phone">
-                <img src="images/1x/Phone.svg" alt="Phone">
-                <p>+088 01877576457</p>
-            </div>
-            <button type="button" class="header__items__button"><b>Sign In</b></button>
-            <div class="header__items-language">
-                <img src="images/1x/World.svg" alt="World">
-                <p>EN</p>
-            </div>
-        </div>
-    </header>
     <body>
+        <header class="header">
+            <div class="header__logo">
+                <img src="images/1x/logo.png" alt="logo">
+            </div>
+            <div class ="header__items">
+                <div class="header__items-phone">
+                    <img src="images/1x/Phone.svg" alt="Phone">
+                    <p>+088 01877576457</p>
+                </div>
+                <button type="button" class="header__items__button">
+                    <b>Sign In</b>
+                </button>
+                <div class="header__items-language">
+                    <img src="images/1x/World.svg" alt="World">
+                    <p>EN</p>
+                </div>
+            </div>
+        </header>
         <main class="page">
             <section class="page__track">
                 <div class="page__track_textfield">
                     <div class="page__track_textfield-text-big">
-                        <b>Delivery is Process</b>
-                    </div>
-                    <div class="page__track_textfield-text-big">
-                        <b>Going From Source Point to</b>
-                    </div>
-                    <div class="page__track_textfield-text-big">
-                        <b>Predefined Destination</b>
+                        <p>
+                            <b>Delivery is Process</b>
+                        </p>
+                        <p>
+                            <b>Going From Source Point to</b>
+                        </p>
+                        <p>
+                            <b>Predefined Destination</b>
+                        </p>
                     </div>
                     <div class="page__track_textfield-text-small">
                         <p>Need to send something on time? Delivery is process of transporting goods</p>
-                    </div>
-                    <div class="page__track_textfield-text-small">
                         <p>from a source location to predefined destination</p>
                     </div>
-                    <form action="#" class="page__track_inputfield">
-                        <input type="text" placeholder="Type your tracking number" class="page__track_inputfield-input">
-                        <button type="button" class="page__track_inputfield-button">Track Parcel</button>
-                    </form>
+                    <div class="page__track_inputfield">
+                        <form action="#">
+                            <input type="text" placeholder="Type your tracking number" class="page__track_inputfield-input">
+                            <button type="button" class="page__track_inputfield-button">Track Parcel</button>
+                        </form>
+                    </div>
                 </div>
                 <picture class="page__bonik">
                     <source srcset="images/2x/byke_leftway_2x.png 2x">
                     <img src="images/1x/byke_leftway_1x.png" alt="bonik">
                 </picture>
             </section>
-            <div class="page__title"><b>Why Choose Us?</b></div>
-            <div class="page__text">
-                <p>Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</p>
-            </div>
+            <p class="page__offers__title">
+                <b>Why Choose Us</b>
+            </p>
+            <p class="page__offers__text">Need to send something on time? Delivery is process of transporting goods</p>
+            <p class="page__offers__text">from a source location to predefined destination</p>
             <section class="page__offers">
-                <div class="page__offers-block page__offers-block-color--ffe4c4">
-                    <div class="page__offers-block-img">
-                        <img src="images/1x/Group1.svg" alt="Industry-leading tech" class="page__offers-block-img">
-                    </div>
-                    <h2>Industry-leading tech</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                <div class="page__offers-block page__offers-block-color--fff3eb">
+                    <img src="images/1x/Group1.svg" alt="Industry-leading tech" class="page__offers-block-img">
+                    <p class="page__offers-block--title">
+                        <b>Industry-leading tech</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color--ecedff">
                     <img src="images/1x/Group2.svg" alt="Nationwide coverage" class="page__offers-block-img">
-                    <h2>Nationwide coverage</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Nationwide coverage</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--90cfcf">
+                <div class="page__offers-block page__offers-block-color--ffecf1">
                     <img src="images/1x/Group3.svg" alt="Fastest delivery" class="page__offers-block-img">
-                    <h2>Fastest delivery</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Fastest delivery</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--ecedff">
+                <div class="page__offers-block page__offers-block-color--f7f7f7">
                     <img src="images/1x/Group4.svg" alt="Next day payment" class="page__offers-block-img">
-                    <h2>Next day payment</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Next day payment</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--90cfcf">
+                <div class="page__offers-block page__offers-block-color--fffaec">
                     <img src="images/1x/Group5.svg" alt="Best COD rated" class="page__offers-block-img">
-                    <h2>Best COD rated</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Best COD rated</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--ffe4c4">
+                <div class="page__offers-block page__offers-block-color--fff3eb">
                     <img src="images/1x/Group6.svg" alt="Secure handling" class="page__offers-block-img">
-                    <h2>Secure handling</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Secure handling</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--90cfcf">
+                <div class="page__offers-block page__offers-block-color--eefff3">
                     <img src="images/1x/Group7.svg" alt="Product insurance" class="page__offers-block-img">
-                    <h2>Product insurance</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Product insurance</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
-                <div class="page__offers-block page__offers-block-color--ffe4c4">
+                <div class="page__offers-block page__offers-block-color--ffecf1">
                     <img src="images/1x/Group8.svg" alt="Verified products" class="page__offers-block-img">
-                    <h2>Verified products</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Verified products</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
                 <div class="page__offers-block page__offers-block-color--ecedff">
                     <img src="images/1x/Group10.svg" alt="Reatime Monitoring" class="page__offers-block-img">
-                    <h2>Realtime Monitoring</h2>
-                    <p>Delivery is process of transporting from source point to predefined destination</p>
+                    <p class="page__offers-block--title">
+                        <b>Realtime Monitoring</b>
+                    </p>
+                    <p class="page__offers-block--text">Delivery is process of transporting from</p>
+                    <p class="page__offers-block--text">source point to predefined destination</p>
                 </div>
             </section>
             <section class="page__apply">
@@ -110,15 +140,21 @@
                     <img src="images/1x/byke_rightway_1x.png" alt="bonik">
                 </picture>
                 <div class="page__apply-aside">
-                    <h2 class="page__title">Apply for Ambassador</h2>
-                    <div class="page__apply-aside-lines">
-                        <p>Need to send something on time? Delivery is process of transporting goods from<br>
-                            a source location to predefined destination</p>
-                    </div>
+                    <p class="page__apply__aside__title">
+                        <b>Apply for Ambassador</b>
+                    </p>
+                    <p class="page__apply__aside__text">Need to send something on time? Delivery is process</p>
+                    <p class="page__apply__aside__text">of transporting goods from a source location to a</p>
+                    <p class="page__apply__aside__text">predefined destination</p>
                     <button type="button" class="page__apply-aside-button">Apply Now</button>
                 </div>
             </section>
-            <h2 class="page__title">Company News Our Latest Article & Tips for You</h2>
+            <p class="page__news__title">
+                <b>Company News Our Latest Article</b>
+            </p>
+            <p class="page__news__title">
+                <b>& Tips for You</b>
+            </p>
             <section class="page__news">
                 <div class="page__news-block">
                     <picture class="page__news-block-img">
@@ -132,13 +168,14 @@
                             <p>12450</p>
                         </div>
                     </div>
-                    <div class="page__news-block-big">
-                        <p><b>Our UX Studio digitally transforms</b></p>
-                    </div>
-                    <div class="page__news-block-big">
-                        <p><b>business through design</b></p>
-                    </div>
-                    <p class="page__news-block-text">All of these problems are addressable trough UX and gamification in partucular. That is not to say that it is a cure-all.</p>
+                    <p class="page__news__block__title">
+                        <b>Our UX Studio digitally transforms</b>
+                    </p>
+                    <p class="page__news__block__title">
+                        <b>business through design</b>
+                    </p>
+                    <br>
+                    <p class="page__news__block__text">All of these problems are addressable trough UX and gamification in partucular. That is not to say that it is a cure-all.</p>
                     <p>
                         <a href="#">Learn more</a>
                     </p>
@@ -155,13 +192,14 @@
                             <p>2953</p>
                         </div>
                     </div>
-                    <div class="page__news-block-big">
-                        <p><b>Your customer do need comprehensive</b></p>
-                    </div>
-                    <div class="page__news-block-big">
-                       <p><b>course to learn how to use your app.</b></p>
-                    </div>
-                    <p class="page__news-block-text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</p>
+                    <p class="page__news__block__title">
+                        <b>Your customer do need comprehensive</b>
+                    </p>
+                    <p class="page__news__block__title">
+                        <b>course to learn how to use your app.</b>
+                    </p>
+                    <br>
+                    <p class="page__news__block__text">Let's be honest. Finance is not exactly pennacle fun. Online companies introduced gamification elements to their product reach up to a 700% icrease in conversion rates</p>
                     <p>
                         <a href="#">Learn more</a>
                     </p>
@@ -178,13 +216,14 @@
                             <p>7980</p>
                         </div>
                     </div>
-                    <div class="page__news-block-big">
-                        <p><b>Scale your startup through exceptional</b></p>
-                    </div>
-                    <div class="page__news-block-big">
-                        <p><b>product experience</b></p>
-                    </div>
-                    <p class="page__news-block-text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</p>
+                    <p class="page__news__block__title">
+                        <b>Scale your startup through exceptional</b>
+                    </p>
+                    <p class="page__news__block__title">
+                        <b>product experience</b>
+                    </p>
+                    <br>
+                    <p class="page__news__block__text">Our UX design agency creates solution to address product usability convresion rates an the ever-present chalenges of user-retention and engagement</p>
                     <p>
                         <a href="#">Learn more</a>
                     </p>
@@ -226,7 +265,7 @@
             </div>
         </footer>
         <div class="page__copyright">
-        <p>Copyright @2021 Bonik Delivery</p>
+            <p>Copyright @2021 Bonik Delivery</p>
         </div>
     </body>
 </html>
