--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Adaptive</title>
         <link rel="stylesheet" href="style_adaptive.css">
+        <link href="https://allfont.ru/allfont.css?fonts=pragmatica" rel="stylesheet" type="text/css">
     </head>
     <body>
         <header class="header">
