--- a/homeworks/nikolay.krasniuk_Kingstar22/7-oop/src/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/7-oop/src/index.html
@@ -17,22 +17,23 @@
             <h1 class="header__logo-title">MyLibrary</h1>
         </header>
         <section class="main">
-            <main class="main__content">
+            <main data-display-image class="main__content">
                 <img class="main__content-item" src="https://images.unsplash.com/photo-1471922694854-ff1b63b20054?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80" alt="img">
                 <img class="main__content-item" src="https://images.unsplash.com/photo-1504803900752-c2051699d0e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" alt="img">
                 <img class="main__content-item" src="https://images.unsplash.com/photo-1542785853-cf202360bca0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="img">
                 <img class="main__content-item" src="https://images.unsplash.com/photo-1454551272232-16b9502430e1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="img">
-                <img class="main__content-item" src="https://images.unsplash.com/photo-1511593358241-7eea1f3c84e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" alt="img">
-                <img class="main__content-item" src="https://images.unsplash.com/photo-1514747975201-4715db583da9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="img">
             </main>
+            <div data-enlarged-image class="main__images">
+                <img >
+            </div>
         </section>
         <div class="upload">
             <label for = "file">
-                <img src="img/plus.svg" alt="upload file">
+                <img class="upload__icon" src="img/plus.svg" alt="upload file">
             </label>
-            <input type = "file" name = "file" id = "file" class = "upload__input">
+            <input data-upload type = "file" name = "file" id = "file" class = "upload__input">
         </div>
-        <div class="screen__loader active">
+        <div data-loader class="screen__loader">
             <div class="lds-dual-ring"></div>
         </div>
     </body>
