add object-fit for images

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/index.html
@@ -26,7 +26,7 @@
                 <div class="photo-gallery" data-gallery></div>
             </div>
             <label class="uploader">
-                <input type="file" data-upload>+
+                <input type="file" accept="image/*" data-upload>+
             </label>
             <div class="image-preview hidden" data-image-preview>
                 <img class="big-image" data-big-image>
