--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/index.html
@@ -10,9 +10,11 @@
     </head>
     <body>
         <header class="header" data-header>
-            <svg class="header__burger" xmlns="http://www.w3.org/2000/svg">
-                <use href="img/burger.svg#burger" data-burger></use>
-            </svg>
+            <div class="header__burger--toggle" data-toggle>
+                <svg class="header__burger" xmlns="http://www.w3.org/2000/svg">
+                    <use href="img/burger.svg#burger" data-burger></use>
+                </svg>
+            </div>
             <a href="index.html" class="header__logo">
                 <svg class="logo__img" xmlns="http://www.w3.org/2000/svg">
                     <use href="img/logo.svg#logo"></use>
