--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/index.html
@@ -27,7 +27,8 @@
                 </template>
             </ul>
             <label for="file-upload" class="custom-btn-file-upload">+</label>
-            <input id="file-upload" class="btn-file-upload hide" type="file" data-upload-image-btn>
+            <input id="file-upload" class="btn-file-upload hide" type="file" data-upload-image-btn
+                accept="image/png, image/gif, image/jpeg">
         </main>
     </body>
 </html>
