correcting the code for the layout

--- a/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/index.html
@@ -14,8 +14,8 @@
 
     <body>
         <div class="modal" data-modal>
+            <img class="modal__container-cancel" data-cancel src="../assets/Vector (1).svg" alt="">
             <div class="modal__container">
-                <span class="modal__container-cancel" data-cancel>X</span>
                 <img class="modal__container-image" data-modal-image src="" alt="">
             </div>
         </div>
@@ -25,9 +25,13 @@
             <p class="header__name-app">MyLibrary</p>
         </header>
         <main class="main" data-main>
-            <div class="main-image" data-image-collection>
-                <div class="loader__container" data-loader>
-                    <div class="loader"></div>
+            <div class="test">
+                <div class="main-image">
+                    <div data-image-collection>
+                        <div class="loader__container" data-loader>
+                            <div class="loader"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <footer class="main__footer">
