fix linters problem

--- a/homeworks/kostya.bublyk_ConstBagel/7-oop/index.html
+++ b/homeworks/kostya.bublyk_ConstBagel/7-oop/index.html
@@ -8,8 +8,10 @@
     <body>
         <div class="gallery__wrapper">
             <header class="gallery__header">
-               <a href="#" class="header__title"><img class="header__logo" src="./img/logo.svg" alt="logo">MyLibrary</a>
-               <!-- <h1 class="header-title">MyLibrary</h1>-->
+                <a href="#" class="header__title">
+                    <img class="header__logo" src="./img/logo.svg" alt="logo">
+                    MyLibrary
+                </a>
             </header>
             <main class="gallery__main" data-role="main-field">
             </main>
