--- a/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/index.html
@@ -24,7 +24,7 @@
             <p class="header__name-app">MyLibrary</p>
         </header>
         <main class="main" data-main>
-            <div class="test">
+            <div class="main__container">
                 <div class="main-image">
                     <div data-image-collection>
                         <div class="loader" data-loader>
