--- a/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/index.html
+++ b/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Title</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@200;300&family=Poppins:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -32,7 +34,7 @@
             <ul class="gallery-section__images" data-images>
                 <template data-template-images>
                     <li>
-                        <img class="gallery-section__img" data-image src="">
+                        <img class="gallery-section__img" data-image src="" alt="">
                     </li>
                 </template>
             </ul>
@@ -46,7 +48,7 @@
             </div>
         </main>
         <div class="gallery-section__full-images-container" data-full-size-modal>
-            <img class="gallery-section__img" data-full-image src="">
+            <img class="gallery-section__img" data-full-image src="" alt="">
             <button class="full-images-container__button-close" data-button-close type="button">
                 <svg class="full-images-container__close-icon">
                     <use xlink:href="#close"></use>
