--- a/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/index.html
+++ b/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/index.html
@@ -13,42 +13,51 @@
     </head>
 
     <body>
+        <div class="loader" data-loader>
+            <div class="loader__modal"></div>
+            <div class="loader__children loader__children--one"></div>
+            <div class="loader__children loader__children--two"></div>
+            <div class="loader__children loader__children--three"></div>
+            <div class="loader__children loader__children--four"></div>
+        </div>
         <div class="modal" data-modal>
-            <img class="modal__container-cancel" data-cancel src="../assets/Vector (1).svg" alt="">
+            <button class="modal__container-cancel" type="button" data-cancel-button>
+                <svg data-cancel width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                    <image href="../assets/Close_icon.svg"></image>
+                </svg>
+            </button>
             <div class="modal__container" data-modal-container>
                 <img class="modal__container-image" data-modal-image src="" alt="">
             </div>
         </div>
         <header class="header">
-            <img src="../assets/Vector.svg" alt="" class="header__logo">
-            <p class="header__name-app">MyLibrary</p>
+            <svg class="header__logo" width="30" height="30" xmlns="http://www.w3.org/2000/svg">
+                <image href="../assets/Logo.svg"></image>
+            </svg>
+            <H1 class="header__name-app">MyLibrary</H1>
         </header>
         <main class="main" data-main>
             <div class="main__container">
-                <div class="main-image">
-                    <div data-image-collection>
-                        <div class="loader" data-loader>
-                            <div class="loader__children loader__children--one"></div>
-                            <div class="loader__children loader__children--two"></div>
-                            <div class="loader__children loader__children--three"></div>
-                            <div class="loader__children loader__children--four"></div>
-                        </div>
-                    </div>
-                </div>
+                <div class="main-image" data-image-collection></div>
             </div>
             <footer class="main__footer">
                 <label class="main__footer-label">
-                    <img class="main__footer-image" src="../assets/1. Standard.png" alt="camera">
-                    <input class="main__footer-input" type="file" data-image>
+                    <div class="main__footer-circle">
+                        <span>+</span>
+                    </div>
+                    <input class="main__footer-input" type="file" data-image accept=".jpg, .jpeg, .png">
                 </label>
-                <p data-p></p>
             </footer>
         </main>
 
         <template data-image-template>
-            <div class="image__block" data-image-block>
-                <img class="image" data-photo src="../assets/Vector.svg" alt="image">
+
+            <div class="image" data-image-block>
+                <button type="button" data-button class="image__button">
+                    <img class="image__block" data-photo src="" alt="">
+                </button>
             </div>
+
         </template>
 
         <script src="../dist/bundle.js"></script>
