--- a/homeworks/nikolay.krasniuk_Kingstar22/7-oop/src/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/7-oop/src/index.html
@@ -16,10 +16,10 @@
         </header>
         <section class="main">
             <main data-display-image class="main__content">
-                <img class="main__content-item" src="https://images.unsplash.com/photo-1471922694854-ff1b63b20054?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80" alt="img">
-                <img class="main__content-item" src="https://images.unsplash.com/photo-1504803900752-c2051699d0e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" alt="img">
-                <img class="main__content-item" src="https://images.unsplash.com/photo-1542785853-cf202360bca0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="img">
-                <img class="main__content-item" src="https://images.unsplash.com/photo-1454551272232-16b9502430e1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="img">
+                <img data-item-img class="main__content-item" src="https://images.unsplash.com/photo-1471922694854-ff1b63b20054?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=872&q=80" alt="img">
+                <img data-item-img class="main__content-item" src="https://images.unsplash.com/photo-1504803900752-c2051699d0e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" alt="img">
+                <img data-item-img class="main__content-item" src="https://images.unsplash.com/photo-1542785853-cf202360bca0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="img">
+                <img data-item-img class="main__content-item" src="https://images.unsplash.com/photo-1454551272232-16b9502430e1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="img">
             </main>
             <div data-enlarged-image class="main__images">
             </div>
