added header and hero section

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -11,6 +11,71 @@
         <title>Archmove | Architech Marketplace?</title>
     </head>
     <body>
+        <header class="main-header page-section">
+            <div class="main-header__container page-container">
+                <nav class="navigation">
+                    <a href="#" class="navigation__logo navigation__link navigation__link--first logo">
+                        <svg class="logo__icon">
+                            <use xlink:href="icons/icons-sprite.svg#logo"></use>
+                        </svg>
+                    </a>
+                    <ul class="navigation-list">
+                        <li class="navigation-list__item">
+                            <a href="#" class="navigation__link">
+                                Design Gallery
+                            </a>
+                        </li>
+                        <li class="navigation-list__item">
+                            <a href="#" class="navigation__link">
+                                List of Architect
+                            </a>
+                        </li>
+                        <li class="navigation-list__item">
+                            <a href="#" class="navigation__link">
+                                Articles
+                            </a>
+                        </li>
+                        <li class="navigation-list__item">
+                            <a href="#" class="navigation__link">
+                                How it Works
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="account-actions">
+                    <button class="button button--theme-toggler" type="button">
+                        <svg class="button--theme-toggler accounts-actions__theme-toggler-icon">
+                            <use xlink:href="icons/icons-sprite.svg#theme-toggler"></use>
+                        </svg>
+                    </button>
+                    <button class="button button--empty account-actions__button" type="button">Sign In</button>
+                    <button class="button button--accented account-actions__button" type="button">Sign Up</button>
+                </div>
+            </div>
+        </header>
+        <section class="hero-section page-section">
+            <div class="hero-section__container page-container">
+                <div class="hero-section__header">
+                    <h1 class="hero-section__title title title--large">
+                        Build Your Dream<span class="title--accented">
+                            House
+                        </span>
+                    </h1>
+                </div>
+                <div class="hero-section__main page-section">
+                    <div class="hero-section__content">
+                        <div class="hero-section__lead text">
+                            The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
+                        </div>
+                        <button class="button hero-section__button button--accented" type="button">Free Consultation</button>
+                    </div>
+                    <picture class="hero-section__image-container">
+                        <source srcset="img/hero-image-x2.jpg 2x">
+                        <img class="hero-section__image" src="img/hero-image.jpg" alt="White sunny room">
+                    </picture>
+                </div>
 
+            </div>
+        </section>
     </body>
 </html>
