added hover and transition to theme toggler icon

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -44,7 +44,7 @@
                 </nav>
                 <div class="account-actions">
                     <button class="button button--theme-toggler" type="button">
-                        <svg class="button--theme-toggler accounts-actions__theme-toggler-icon">
+                        <svg class="accounts-actions__theme-toggler-icon">
                             <use xlink:href="icons/icons-sprite.svg#theme-toggler"></use>
                         </svg>
                     </button>
