--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -13,7 +13,7 @@
     <body>
         <header class="main-header page-section">
             <div class="main-header__container page-container">
-                <nav class="navigation">
+                <nav class="main-header__navigation navigation">
                     <a href="#" class="navigation__logo navigation__link navigation__link--first logo">
                         <svg class="logo__icon">
                             <use xlink:href="icons/icons-sprite.svg#logo"></use>
@@ -74,8 +74,74 @@
                         <img class="hero-section__image" src="img/hero-image.jpg" alt="White sunny room">
                     </picture>
                 </div>
-
             </div>
         </section>
+        <section class="gallery-section page-section">
+            <div class="gallery-section__container page-container">
+                <h2 class="gallery-section__title title">
+                    Build professional valuable room for you
+                </h2>
+                <div class="gallery-section__row">
+                    <picture class="gallery-section__image-container">
+                        <source srcset="img/row-image-x2-1.jpg 2x">
+                        <img class="gallery-section__image" src="img/row-image-1.jpg" alt="White sunny room">
+                    </picture>
+                    <picture class="gallery-section__image-container">
+                        <source srcset="img/row-image-x2-2.jpg 2x">
+                        <img class="gallery-section__image" src="img/row-image-2.jpg" alt="White sunny room">
+                    </picture>
+                    <picture class="gallery-section__image-container">
+                        <source srcset="img/row-image-x2-3.jpg 2x">
+                        <img class="gallery-section__image" src="img/row-image-3.jpg" alt="White sunny room">
+                    </picture>
+                    <picture class="gallery-section__image-container">
+                        <source srcset="img/row-image-x2-4.jpg 2x">
+                        <img class="gallery-section__image" src="img/row-image-4.jpg" alt="White sunny room">
+                    </picture>
+                </div>
+            </div>
+        </section>
+        <footer class="footer-section page-section">
+            <div class="footer-section__container page-container">
+                <nav class="footer-section__navigation navigation">
+                    <a href="#"
+                        class="
+                    navigation__logo
+                    navigation__link
+                    logo
+                    footer-section__logo
+                    ">
+                        <svg class="logo__icon">
+                            <use xlink:href="icons/icons-sprite.svg#logo"></use>
+                        </svg>
+                    </a>
+                    <ul class="navigation-list">
+                        <li class="navigation-list__item navigation-list__item--first">
+                            <a href="#" class="
+                            navigation__link
+                            navigation__link--first
+                            ">
+                                Design Gallery
+                            </a>
+                        </li>
+                        <li class="navigation-list__item">
+                            <a href="#" class="navigation__link">
+                                List of Architect
+                            </a>
+                        </li>
+                        <li class="navigation-list__item">
+                            <a href="#" class="navigation__link">
+                                Articles
+                            </a>
+                        </li>
+                        <li class="navigation-list__item">
+                            <a href="#" class="navigation__link">
+                                How it Works
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </body>
 </html>
