added consultation section

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -101,6 +101,24 @@
                 </div>
             </div>
         </section>
+        <section class="consultation-section page-section">
+            <div class="consultation-section__container page-container">
+                <picture class="consultation-section__image-container">
+                    <source srcset="img/consultation-image-x2.png 2x">
+                    <img class="consultation-section__image" src="img/consultation-image.png" alt="Big white building">
+                </picture>
+                <div class="consultation-section__hero-container">
+                    <h3 class="consultation-section__title title">
+                        Realize your dream project with <span class="title--accented">
+                            Archmove
+                        </span>
+                    </h3>
+                    <button class="button button--accented consultation-section__button" type="button">
+                        FREE CONSULTATION
+                    </button>
+                </div>
+            </div>
+        </section>
         <footer class="footer-section page-section">
             <div class="footer-section__container page-container">
                 <nav class="footer-section__navigation navigation">
