--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -19,23 +19,23 @@
                             <use xlink:href="icons/icons-sprite.svg#logo"></use>
                         </svg>
                     </a>
-                    <ul class="navigation-list">
-                        <li class="navigation-list__item">
+                    <ul class="navigation__list">
+                        <li class="navigation__list-item">
                             <a href="#" class="navigation__link">
                                 Design Gallery
                             </a>
                         </li>
-                        <li class="navigation-list__item">
+                        <li class="navigation__list-item">
                             <a href="#" class="navigation__link">
                                 List of Architect
                             </a>
                         </li>
-                        <li class="navigation-list__item">
+                        <li class="navigation__list-item">
                             <a href="#" class="navigation__link">
                                 Articles
                             </a>
                         </li>
-                        <li class="navigation-list__item">
+                        <li class="navigation__list-item">
                             <a href="#" class="navigation__link">
                                 How it Works
                             </a>
@@ -101,6 +101,50 @@
                 </div>
             </div>
         </section>
+        <section class="features-section page-section">
+            <div class="features-section__container page-container">
+                <h2 class="features-section__title title">
+                    Build your needs with Archmove
+                </h2>
+                <div class="features-section__content">
+                    <picture class="features-section__image-container">
+                        <source srcset="img/meeting-image-x2.jpg 2x">
+                        <img class="features-section__image" src="img/meeting-image.jpg" alt="People in meeting room">
+                    </picture>
+                    <div class="features-section__details">
+                        <ul class="features-section__list features-list">
+                            <li class="features-section__list-item feature-item">
+                                <h4 class="feature-item__title">
+                                    100% guaranteed project completion
+                                </h4>
+                                <p class="feature-item__lead">
+                                    Build safe, comfortable and transparent with a project management application with a joint account.
+                                </p>
+                            </li>
+                            <li class="features-section__list-item feature-item">
+                                <h4 class="feature-item__title">
+                                    No additional fees
+                                </h4>
+                                <p class="feature-item__lead">
+                                    There are no hidden costs. The value of the offer you get is the value you paid.
+                                </p>
+                            </li>
+                            <li class="features-section__list-item feature-item">
+                                <h4 class="feature-item__title">
+                                    Get escort from the Team
+                                </h4>
+                                <p class="feature-item__lead">
+                                    Monitor reports from the Arsitag team who check directly in the field.
+                                </p>
+                            </li>
+                        </ul>
+                        <button class="features-section__button button button--accented" type="button">
+                            FREE CONSULTATION
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="consultation-section page-section">
             <div class="consultation-section__container page-container">
                 <picture class="consultation-section__image-container">
@@ -133,8 +177,8 @@
                             <use xlink:href="icons/icons-sprite.svg#logo"></use>
                         </svg>
                     </a>
-                    <ul class="navigation-list">
-                        <li class="navigation-list__item navigation-list__item--first">
+                    <ul class="navigation__list">
+                        <li class="navigation__list-item navigation__list-item--first">
                             <a href="#" class="
                             navigation__link
                             navigation__link--first
@@ -142,17 +186,17 @@
                                 Design Gallery
                             </a>
                         </li>
-                        <li class="navigation-list__item">
+                        <li class="navigation__list-item">
                             <a href="#" class="navigation__link">
                                 List of Architect
                             </a>
                         </li>
-                        <li class="navigation-list__item">
+                        <li class="navigation__list-item">
                             <a href="#" class="navigation__link">
                                 Articles
                             </a>
                         </li>
-                        <li class="navigation-list__item">
+                        <li class="navigation__list-item">
                             <a href="#" class="navigation__link">
                                 How it Works
                             </a>
