fixed page container width

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header class="main-header page-section">
-            <div class="main-header__container page-container">
+            <div class="main-header__container page-container page-container--large">
                 <nav class="main-header__navigation navigation">
                     <a href="#" class="navigation__logo navigation__link navigation__link--first logo">
                         <svg class="logo__icon">
@@ -77,7 +77,7 @@
             </div>
         </section>
         <section class="gallery-section page-section">
-            <div class="gallery-section__container page-container">
+            <div class="gallery-section__container page-container page-container--large">
                 <h2 class="gallery-section__title title">
                     Build professional valuable room for you
                 </h2>
